[gd_scene load_steps=3 format=3 uid="uid://bxsoq5jexegc1"]

[ext_resource type="Script" uid="uid://b8y5dj4ftafe8" path="res://menu.gd" id="1_lti8b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uubjt"]
bg_color = Color(0, 0.0980392, 0, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uubjt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 66
theme_override_constants/margin_top = 244
theme_override_constants/margin_right = 66
theme_override_constants/margin_bottom = 244

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ButtonTillTracker" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 44
text = "Till Tracker"

[node name="ButtonTapCounter" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 44
text = "Tap Counter"

[node name="ButtonQuit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 44
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonTillTracker" to="." method="_on_button_till_tracker_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonTapCounter" to="." method="_on_button_tap_counter_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
